Changed flex basis to avoid wrap of a single speaker

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -118,7 +118,7 @@ b {
 		@include justify-content(center);
 	}
 	li {
-		@include flex-basis(250px);
+		@include flex-basis(257px);
 	}
 }
 
